# thirukural-explorer-223287-223304

./: .env.example  README.md
.init/: .init-build-cmd  .init-generate-openapi  .init-install-dependencies  .init-run-tool  .init-test-tool  .linter.sh
.knowledge/: .knowledge.json  README.md.json  thirukural_backend_pyproject.toml.json  thirukural_backend_pytest.ini.json  thirukural_backend_src___main__.py.json  thirukural_backend_src_api___init__.py.json  thirukural_backend_src_api___main__.py.json  thirukural_backend_src_api_ai_service.py.json  thirukural_backend_src_api_data_thirukural.json.json  thirukural_backend_src_api_generate_openapi.py.json  thirukural_backend_src_api_main.py.json  thirukural_backend_src_api_models.py.json  thirukural_backend_start.sh.json  thirukural_backend_tests_test_normalization.py.json
.knowledge/.vector_db/: milvus.db
thirukural_backend/: pyproject.toml  requirements.txt  start.sh
thirukural_backend/src/: __main__.py
thirukural_backend/src/api/: __main__.py  ai_service.py  generate_openapi.py  main.py  models.py
thirukural_backend/src/api/data/: thirukural.json
thirukural_backend/tests/: test_normalization.py
