[project]
name = "thirukural-backend"
version = "1.0.0"
description = "FastAPI backend for Thirukural Explorer"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "typing-extensions>=4.8.0",
]

[tool.uvicorn]
app = "src.api.main:app"
host = "0.0.0.0"
port = 3001
reload = false
